--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3id/connect": "^0.4.1",
+    "@ceramicnetwork/3id-did-resolver": "^2.1.3",
+    "@ceramicnetwork/http-client": "^2.3.0",
+    "@ceramicstudio/idx": "^0.12.2",
+    "dids": "^3.2.0",
+    "ethers": "^5.6.9",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
