--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ceramicstudio/idx": "^0.12.2",
     "dids": "^3.2.0",
     "ethers": "^5.6.9",
+    "key-did-resolver": "^2.0.5",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
