--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ceramic-playground",
+  "name": "ceramic-profiles-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@3id/connect": "^0.4.1",
-    "@ceramicnetwork/3id-did-resolver": "^2.1.3",
+    "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
     "@ceramicnetwork/http-client": "^2.3.0",
-    "@ceramicstudio/idx": "^0.12.2",
-    "dids": "^3.2.0",
-    "ethers": "^5.6.9",
-    "key-did-resolver": "^2.0.5",
-    "next": "12.2.1",
+    "@glazed/did-datastore": "^0.3.2",
+    "@glazed/did-session": "^0.1.1",
+    "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "dids": "^3.2.0",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.1"
+    "eslint-config-next": "12.2.2",
+    "key-did-provider-ed25519": "^2.0.0",
+    "key-did-resolver": "^2.0.5"
   }
 }
